Labeling paper modified.

--- a/docs/label.tex
+++ b/docs/label.tex
@@ -104,9 +104,9 @@ It has been a common software engineering task to find the most feasible and eff
 
 In today's fast paced software practices, habitual selection of readily available standard STL data containers are preffered with not much concern on the scalability that often lead to unacceptable results when the data size is immense and cross relations play a big factor in speed and storage. The deviation from efficiency is more pronounced particularly for billion+ large graphs in which relations between the graph entities and the unlimited string labels result in one-to-many and many-to-many associations. Many graph vendors implement the label associations to graph nodes and edges using this habitual standard key-value look-up containers~\cite{graphdbs, neo4j, tiger, networkx}. Instead of addressing the efficiency of these data-structures, these vendors suggested the distributed graph representations when it is simply not possible to store and solve large (billion+) graphs. However, suggesting a wrong recipe for a much simpler issue creates bigger bottlenecks; the clustering of the partitions has a huge impact on the speed of the distributed solves and queries since the scalar values have to be transferred across adjacent partitions many times for convergence. If the solve or query graph traversals need to jump back and forth across partitions frequently due to inter-mingling of the partitions with poor clustering characteristics, it would take many more iterations to converge. Hence the seemingly much simpler problem of devising a light weight and efficient data containers the issue is transformed into a more complex problem of how to make partitioning more efficient with the least amount of inter-partition boundary nodes. 
 
-Before we introduce and suggest this light weight and super efficient entity-label data structures, it is prudent to give some technical details and summary over the conventional sorted or hashed look-up containers. Singly or multiply associative key-value pair look-up containers often implement red-black trees (RBTrees) for sorted balanced trees)~\cite{rbt,rbt2}, a binary search structure with user-specified sort functions or the hash tables where the item is hashed with the user specified hashing function. For the latter, the item is appended to a list of items whose hash keys are the same within the same bucket, known as hashing by chaining~\cite{hash,hash2}, or using a mechanism to spread the data, called probing~\cite{probing,probing2} by pinpointing to the empty bucket locations for the same hash-key entries (hash-collisions). Hashing by chaining technique is easier to implement and control, however, for dynamic scenarios, reallocation (rehashing) is required that can quickly result in de-fragmentation and large memory foot prints, on the other hand probing techniques could suffer on both the speed and the large memory issues for very large data particularly for high number of collisions as well. The sorted maps (RBTrees) has the logarithmic search time complexity, however, the performance quickly degrades when the tree gets larger as summarized in Figure~\ref{Figure:maps}. These are the known issues for hashed and sorted maps but for up-to a few to ten million item key-value look-ups, these data structures are usually very hard to beat on many technical merits that they offer reliably standard implementations over a variety of OS architectures~\cite{benchmark}. 
+Before we introduce and suggest this light weight and super efficient entity-label data structures, it is prudent to give some technical details and summary over the conventional sorted or hashed look-up containers. Singly or multiply associative key-value pair look-up containers often implement red-black trees (RBTrees) for sorted balanced trees~\cite{rbt,rbt2}, a binary search structure with user-specified sort functions or the hash tables where the item is hashed with the user specified hashing function. For the latter, the item is appended to a list of items whose hash keys are the same within the same bucket, known as hashing by chaining~\cite{hash,hash2}, or using a mechanism to spread the data, called probing~\cite{probing,probing2} by pinpointing to the empty bucket locations for the same hash-key entries (hash-collisions). Hashing by chaining technique is easier to implement and control, however, for dynamic scenarios, reallocation (rehashing) is required that can quickly result in de-fragmentation and large memory foot prints, on the other hand probing techniques could suffer on both the speed and the large memory issues for very large data particularly for high number of collisions as well. Sorted maps (RBTrees) has the logarithmic search time complexity, however, the performance quickly degrades when the tree gets larger as summarized in Figure~\ref{Figure:maps}. These are the known issues for hashed and sorted maps but for up-to a few to ten million item key-value look-ups, these data structures are usually very hard to beat on many technical merits that they offer reliably standard implementations over a variety of OS architectures~\cite{benchmark}. 
 
-In this paper, we'll explain a very light weight and efficient novel data structures in modeling the graph labels to nodes and edges that enabled us creating $4+$ billion edge graph with $64-char$ labels within less than a 1TByte machine as well as distributed over 6-machines.  The graph ontology along with the direct and inverse relations between entities and labels will be discussed on a simple example in Section~\ref{Section:SampleInput}. The new data structures for storing direct and inverse labels will be covered in Section~\ref{Section:NewDataStructure}. Finally, in Section~\ref{Section:Parallelism}, a billion+ graph case will be demonstrated both on single node and distributed mode using this super efficient labeling framework.
+In this paper, we'll explain a very light weight and efficient novel data structures in modeling the graph labels to nodes and edges that enabled us creating $4+$ billion edge graph with $64-char$ labels per node/edge within less than a 1TByte (Terra Byte) machine as well as distributed over 6-machines.  The graph ontology along with the direct and inverse relations between entities and labels will be discussed on a simple example in Section~\ref{Section:SampleInput}. The new data structures will be covered in Section~\ref{Section:NewDataStructure}. Finally, in Section~\ref{Section:Parallelism}, a billion+ graph case will be demonstrated both on single node and distributed mode using this super efficient labeling framework.
 
 \begin{figure}
 \centering
@@ -261,7 +261,7 @@ In order to illustrate this, a key-value label grouping data-structure is shown 
 \section{Single and Distributed modes}
 \label{Section:Parallelism}
 
-The labeling framework explained in the previous Section~\ref{Section:NewDataStructure} is scalable, fixed and small, enabling queries in constant time. Hence the memory bottle-neck for large graphs is circumvented to a degree that does not require to distribute the graph at least for upto ten-twenty billion node/edges within 1-2 TByte RAM limits. We have also exercised a built-in transparent compression utility called ZRAM~\cite{zram}, that compresses the large in-place single list vectors implicitly and unzips when the data is needed, all behind the scenes in real time, with a very acceptable performance penalty increase of $10-20 \%$ based on our findings. It is possible to get $1\colon4$ compressions with ZRAM that enables us to create billion+ graphs constrained by the physical 1-2 TByte RAM limits on a single node without having to distribute it . Distributed graph requires the queries and the solves to be performed by a more sophisticated algorithm that might need to jump back and forth between the sub-graphs (partitions) in an iterative manner until convergence. In the case of graph queries (adjacency traversals), the query algorithm might need to ping-pong among multiple partitions many times until the traversal reaches to the requested number of hops. 
+The labeling framework explained in the previous Section~\ref{Section:NewDataStructure} is scalable, fixed and small, enabling queries in constant time. Hence the memory bottle-neck for large graphs is circumvented to a degree that does not require to distribute the graph at least for upto ten-twenty billion node/edges within 1-2 TByte RAM limits. We have also exercised a built-in transparent compression utility called ZRAM~\cite{zram}, that compresses the large in-place single list vectors implicitly and unzips when the data is needed, all behind the scenes in real time, with a very acceptable performance penalty increase of $20\%$ based on our findings. It is possible to get $1\colon4$ compressions with ZRAM that enables us to create billion+ graphs constrained by the physical 1-2 TByte RAM limits on a single node without having to distribute it . Distributed graph requires the queries and the solves to be performed by a more sophisticated algorithm that might need to jump back and forth between the sub-graphs (partitions) in an iterative manner until convergence. In the case of graph queries (adjacency traversals), the query algorithm might need to ping-pong among multiple partitions many times until the traversal reaches to the requested number of hops. 
 
 
 \begin{figure*}
@@ -283,7 +283,7 @@ Therefore, when the graph size is too big to fit into the available physical mem
 \begin{figure}
 \centering
     \includegraphics[width=0.9\linewidth, keepaspectratio]{clusters.pdf} 
-    \caption{Louvain (left) and Recursive Spectral Bisection (RSB) cluster partitioning (right) solvers applied over the label graph (ontology graph); each node label is associated with a cluster index. Both solvers are implemented in-house and freely available in Kinetica-Graph.}
+    \caption{Louvain (left) and Recursive Spectral Bisection (RSB) cluster partitioning (right) solvers applied over the label graph (ontology graph); each node label is associated with a cluster index. Both solvers are implemented in-house and freely available in Kinetica-Graph under match/graph endpoint.}
     \label{Figure:clusters}
 \end{figure}
 
@@ -309,9 +309,9 @@ The future work on this novel labeling framework would be developing efficient p
 \centering
 \begin{bchart}[step=1,max=4,scale=0.7]]
 \bcbar[text=1]{0.73}
-\bcbar[text=10]{1.69}
-\bcbar[text=100~(5.5Gb)]{2.74}
-\bcbar[text=1000 million nodes~(66Gb)]{3.82}
+\bcbar[text=10~~\scriptsize{(0.49Gb)}]{1.69}
+\bcbar[text=100~~~~~~~~~\scriptsize{(5.5Gb)}]{2.74}
+\bcbar[text=1000 million nodes~~~~\scriptsize{(66Gb)}]{3.82}
 %\bclabel{$Nodes[mil]$}
 \bcxlabel{ $log(100*memory) [Gb]$}
 \end{bchart}
