Labeling paper modified.

--- a/docs/label.tex
+++ b/docs/label.tex
@@ -139,7 +139,7 @@ as shown in Figure~\ref{Figure:wikigraph}. In Kinetica-Graph~\cite{kineticagraph
 \begin{figure}
 \centering
     \framebox{\includegraphics[width=0.8\linewidth, keepaspectratio]{wiki_schema.pdf}}
-    \caption{This is the graph ontology generated from its node and edge labels to depict how labels are connected to each other. Our create/graph endpoint (API) generates this information as dot graph format in its response.}
+    \caption{This is the graph ontology generated from its node and edge labels to depict how labels are connected to each other. Our create/graph endpoint (API) generates this information as dot graph format in its response. For example, $20\%$ of the graph edges are in between \textit{chess:MALE} node labels shown as a self-looping edge above.}
     \label{Figure:wikischema}
 \end{figure}
 
