final form of the paper

--- a/docs/label.tex
+++ b/docs/label.tex
@@ -353,7 +353,7 @@ The future work on this novel labeling framework would be developing efficient p
 
 \section*{Acknowledgement}
 
-The authors would like to thank Expero Incorporated who provided a descriptive graph dataset to simulate a credit card scoring use case so that we could improve Kinetica-Graph's labeling framework explained in this manuscript.
+The authors would like to thank Expero, who provided a descriptive graph data-set to simulate a real world credit card risk scoring use case so that we could improve Kinetica-Graph's labeling framework explained in this manuscript.
 
 \section*{Notes on Contributors}
 \small{
